--- a/index.html
+++ b/index.html
@@ -1,1 +1,2 @@
-<iframe src="http://39.106.32.206/home.html"></iframe>
+<body style="margin:0px;padding:0px;overflow:hidden">
+<iframe src="http://39.106.32.206/home.html" frameborder="0" style="overflow:hidden;height:100%;width:100%" height="100%" width="100%"></iframe></body>
